# dMusic

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  windows-x86.cmake
dependencies/: CMakeLists.txt
dependencies/Hacks/include/: Hook.h
dependencies/Union/GothicAPI/Gothic_II_Addon/: G2A_StaticsProperties.cpp
dependencies/Union/GothicAPI/Gothic_II_Addon/API/: zContainer.h  zString.h  zTexture.h  zTypes.h  zVobMisc.h
dependencies/Union/GothicAPI/Gothic_II_Classic/: G2_StaticsProperties.cpp
dependencies/Union/GothicAPI/Gothic_II_Classic/API/: zContainer.h  zString.h  zTexture.h  zTypes.h
dependencies/Union/GothicAPI/Gothic_I_Addon/: G1A_StaticsProperties.cpp
dependencies/Union/GothicAPI/Gothic_I_Addon/API/: zContainer.h  zString.h  zTexture.h  zTypes.h
dependencies/Union/GothicAPI/Gothic_I_Classic/: G1_StaticsProperties.cpp
dependencies/Union/GothicAPI/Gothic_I_Classic/API/: zContainer.h  zString.h  zTexture.h  zTypes.h
dependencies/Union/ZenGin/Gothic_II_Addon/: Statics_G2A.cpp
dependencies/Union/ZenGin/Gothic_II_Addon/API/: oFocus.h  oInventory.h  oLogManager.h  z3d.h  zDisk.h  zEigen.h  zRndD3d.h  zString.h
dependencies/Union/ZenGin/Gothic_II_Classic/: Statics_G2.cpp
dependencies/Union/ZenGin/Gothic_II_Classic/API/: oFocus.h  oInventory.h  oLogManager.h  z3d.h  zDisk.h  zEigen.h  zRndD3d.h  zString.h
dependencies/Union/ZenGin/Gothic_I_Addon/: Statics_G1A.cpp
dependencies/Union/ZenGin/Gothic_I_Addon/API/: oFocus.h  oInventory.h  oLogManager.h  z3d.h  zDisk.h  zEigen.h  zRndD3d.h  zString.h
dependencies/Union/ZenGin/Gothic_I_Classic/: Statics_G1.cpp
dependencies/Union/ZenGin/Gothic_I_Classic/API/: oFocus.h  oInventory.h  oLogManager.h  z3d.h  zDisk.h  zEigen.h  zRndD3d.h  zString.h
dependencies/sqrat/include/: sqmodule.h
dependencies/sqrat/include/sqrat/: sqratFunction.h
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/stylesheets/: extra.css
src/: pch.h  sqFunction.cpp  sqFunction.h  sqUtils.cpp  sqUtils.h  sqmain.cpp
src/api/: module_api.cpp
